<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    >
    
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_detail_item_avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:foregroundGravity="center_horizontal"
        android:visibility="visible"
        app:civ_border_color="#808080"
        app:civ_border_width="0.3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"
        />
    
    <TextView
        android:id="@+id/tv_detail_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/user_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/img_detail_item_avatar"
        app:layout_constraintStart_toStartOf="@+id/img_detail_item_avatar"
        app:layout_constraintTop_toBottomOf="@+id/img_detail_item_avatar"
        />
    
    <TextView
        android:id="@+id/tv_detail_fullname"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="4dp"
        android:text="@string/full_nama"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/img_detail_item_avatar"
        app:layout_constraintStart_toStartOf="@+id/img_detail_item_avatar"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_username"
        />
    
    <TextView
        android:id="@+id/textViewFollowers"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="4dp"
        android:text="@string/followers"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_fullname"
        />
    
    <TextView
        android:id="@+id/textViewFollowing"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="75dp"
        android:text="@string/following"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_fullname"
        />
    
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333"
        tools:visibility="visible"
        />
    
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/detail_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/nav_tab_desc"
        app:layout_constraintEnd_toEndOf="@+id/textViewFollowing"
        app:layout_constraintStart_toStartOf="@+id/textViewFollowers"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_fullname"
        app:tabTextColor="?attr/colorPrimary"
        />
    
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/detail_tabs"
        app:layout_constraintStart_toStartOf="@+id/detail_tabs"
        app:layout_constraintTop_toBottomOf="@id/detail_tabs"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
